<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.example.blog.controller.MainNavigation">


        <Button
            android:id="@+id/sellingList"

            android:text="Offer New Ride"
            android:textColor="@color/textWhite"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/button_style_blue"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/requestList"
            android:layout_alignStart="@+id/requestList" />

        <Button
            android:id="@+id/requestList"
            android:text="@string/request_new_ride"
            android:textColor="@color/colorPrimaryDark"
...
